Add vim to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -186,6 +186,8 @@ dist/
 # sftp configuration file
 sftp-config.json
 
+### Vim ###
+*.swp
 
 ### Public, this is where compiled things live ###
 /public/
