Refactor a lot of things, options -> config, globals -> pageContext

--- a/config.toml
+++ b/config.toml
@@ -17,6 +17,6 @@
 	timeout	= 0
 
 # This is data that will be passed into all mustache templates
-[globals]
+[pageContext]
 	longName = "University Radio York"
 	shortName = "URY"
