--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@
 #
 # This is the main config file for the 2016-site.
 # Api Key should not be stored in this file. It should be in `.myradio.key`
-# Any changes to this config should be reflected in the struct `structs.Options`
+# Any changes to this config should be reflected in the struct `structs.Config`
 
 # This is the config for the server
 [server]
@@ -20,3 +20,8 @@
 [pageContext]
 	longName = "University Radio York"
 	shortName = "URY"
+
+	[[pageContext.pages]]
+		name = "Search"
+		url = "search/"
+
