--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "website"
   ],
   "author": "Chris Taylor",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "grunt": "^0.4.5",
     "grunt-auto-install": "^0.3.0",
