--- a/bower.json
+++ b/bower.json
@@ -11,11 +11,11 @@
 	"node"
   ],
   "dependencies": {
-	"bootstrap": "^3.3.5",
-	"modernizr": "~2.6.2",
-	"jquery": "^2.1.4",
-	"moment": "^2.10.6",
-	"jquery-ui": "^1.11.4"
+    "bootstrap": "^3.3.6",
+    "modernizr": "^3.3.1",
+    "jquery": "^2.2.3",
+    "moment": "^2.13.0",
+    "jquery-ui": "^1.11.4"
   },
   "private": true,
   "license": "MIT",
