Add rudimentary URL prefixing function
This is so that, when people like me are running 2016-site under
a subtree (eg '2016site-mattbw'), we can make 2016-site append
things to its URL prefixes.

In practice, at the moment nothing uses the prefix, and it's
subject to redesign and debate when this changeset goes in for
review.

--- a/config.toml.example
+++ b/config.toml.example
@@ -21,6 +21,8 @@
 	longName  = "University Radio York"
 	shortName = "URY"
 
+	urlPrefix = ""
+
 	[[pageContext.pages]]
 		name = "Search"
 		url  = "search/"
