--- a/config.toml.example
+++ b/config.toml.example
@@ -20,6 +20,7 @@
 [pageContext]
 	longName  = "University Radio York"
 	shortName = "URY"
+	siteDescription = "University Radio York (URY) is the student radio station for the University of York, broadcasting 24 hours a day during term time on 1350am across campus, and worldwide via this website."
 
 	urlPrefix = ""
 	fullURL = "https://ury.org.uk"
