--- a/config.toml.example
+++ b/config.toml.example
@@ -37,6 +37,11 @@
 		APIKey = "AIzaSyCzI5Gvpq1hPlfjvB81EVc0vLv_11eW7NI"
 		playlistID = "PLsxUDJzU4VKDudlmlYb-ImFKreFKAfFln"
 
+	[pageContext.gmaps]
+		APIKey = "AIzaSyACeeyIgdIhiSxV01OIPiA3MyJDqrOspLQ"
+		latitude = 53.948193
+		longitude = -1.054030
+
 # This is config for the schedule renderer
 [schedule]
 	[schedule.sustainer]
