More work on Individual Podcast pages, the embed player and the URY OD landing page.

--- a/config.toml.example
+++ b/config.toml.example
@@ -29,6 +29,8 @@
 	mainFacebook = "URY1350"
 	newsTwitter = "URYNews"
 
+	odName = "((URY)) on Tap"
+
 	[[pageContext.pages]]
 		name = "Search"
 		url  = "search/"
