update editor config

--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,7 @@
 root = true
 
 [*]
-indent_style = tab
+indent_style = space
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
@@ -15,7 +15,7 @@ trim_trailing_whitespace = false
 insert_final_newline = false
 
 ; YAML, TOML
-[*.{yaml,yml,toml,tml}]
+[*.{yaml,yml,toml,tml,js,scss}]
 indent_size = 2
 
 ; MyRadio API Key
