--- a/.editorconfig
+++ b/.editorconfig
@@ -10,9 +10,8 @@ insert_final_newline = true
 [*.md]
 trim_trailing_whitespace = false
 
-; Mustache
-[*.mustache]
-insert_final_newline = false
+[Makefile]
+indent_style = tab
 
 ; YAML, TOML
 [*.{yaml,yml,toml,tml,js,scss}]
