--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -97,7 +97,7 @@ linters:
 
   LeadingZero:
     enabled: true
-    style: exclude_zero # or 'include_zero'
+    style: include_zero
 
   MergeableSelector:
     enabled: true
