--- a/config.toml.example
+++ b/config.toml.example
@@ -19,7 +19,7 @@
 # This is data that will be passed into all templates
 [pageContext]
 	longName  = "University Radio York"
-	shortName = "URY"
+	shortName = "((URY))"
 	siteDescription = "University Radio York (URY) is the student radio station for the University of York, broadcasting 24 hours a day during term time on 1350am across campus, and worldwide via this website."
 
 	urlPrefix = ""
@@ -39,6 +39,7 @@
 	[pageContext.youtube]
 		APIKey = "AIzaSyCzI5Gvpq1hPlfjvB81EVc0vLv_11eW7NI"
 		playlistID = "PLsxUDJzU4VKDudlmlYb-ImFKreFKAfFln"
+		channelURL = "//youtube.com/ury1350"
 
 	[pageContext.gmaps]
 		APIKey = "AIzaSyACeeyIgdIhiSxV01OIPiA3MyJDqrOspLQ"
