--- a/config.toml.example
+++ b/config.toml.example
@@ -46,7 +46,8 @@
 
 # This is config for the schedule renderer
 [schedule]
+	startHour = 3
+
 	[schedule.sustainer]
 		name = "Overnight Owen"
 		desc = "Non-stop tones from the URY jukebox."
-
