--- a/config.toml.example
+++ b/config.toml.example
@@ -42,7 +42,7 @@
 
 	[pageContext.youtube]
 		APIKey = "AIzaSyCzI5Gvpq1hPlfjvB81EVc0vLv_11eW7NI"
-		playlistID = "PLsxUDJzU4VKDudlmlYb-ImFKreFKAfFln"
+		sessionsPlaylistID = "PLsxUDJzU4VKDudlmlYb-ImFKreFKAfFln"
 		cinPlaylistID = "PLsxUDJzU4VKAG4VzgVrrnVrH4sxAAHLMg"
 		channelURL = "//youtube.com/ury1350"
 
