--- a/config.toml.example
+++ b/config.toml.example
@@ -15,6 +15,7 @@
 	address	= "localhost"
 	port    = 3000
 	timeout	= 0
+	myradio_api = "https://www.ury.org.uk/api/v2"
 
 # This is data that will be passed into all templates
 [pageContext]
