--- a/faqs.toml
+++ b/faqs.toml
@@ -25,6 +25,10 @@ answer = "Yes! Any paid member who has completed our training session, signs our
 seemore = "getinvolved#signUp"
 
 [[faqs]]
+question = "How much does it cost to be part of URY?"
+answer = "To be on air or work with any of our equipment, you must pay membership for the year, which is £7 to do as much as you want."
+
+[[faqs]]
 question = "Do I have to be on air?"
 answer = "No, we’ve got plenty of opportunities behind-the-scenes, such as our computing and engineering teams, and curating playlists and writing radio dramas."
 seemore = "teams"
