--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,6 +17,8 @@ jobs:
       uses: WillAbides/setup-go-faster@v1.6.0
       with:
         go-version: 1.17
+    
+    - run: ls $GITHUB_WORKSPACE
 
     - name: Build
       run: go build -v ./...
