--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,15 +18,15 @@ jobs:
       with:
         go-version: 1.17
 
-    - run: ls $GITHUB_WORKSPACE
+    - run: ls ${{ github.workspace }}
 
     - name: Build
       run: go build -v ./...
-      working-directory: $GITHUB_WORKSPACE
+      working-directory: ${{ github.workspace }}
 
     - name: Test
       run: go test -v ./...
-      working-directory: $GITHUB_WORKSPACE
+      working-directory: ${{ github.workspace }}
 
   lint:
     runs-on: ubuntu-latest
@@ -42,4 +42,4 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           version: latest
-          working-directory: ${{ env.GITHUB_WORKSPACE }}
+          working-directory: ${{ github.workspace }}
