--- a/config.toml.example
+++ b/config.toml.example
@@ -21,7 +21,7 @@
 [pageContext]
 	longName  = "University Radio York"
 	shortName = "URY"
-	siteDescription = "University Radio York (URY) is the student radio station for the University of York, broadcasting 24 hours a day during term time on 1350am across campus, and worldwide via this website."
+	siteDescription = "University Radio York (URY) is the student radio station for the University of York, broadcasting 24 hours a day during term time on 1350AM and 88.3FM across campus, and worldwide via this website."
 
 	urlPrefix = ""
 	fullURL = "https://ury.org.uk"
@@ -69,7 +69,3 @@
 	[schedule.sustainer]
 		name = "Overnight Owen"
 		desc = "Non-stop tones from the URY jukebox."
-
-# This is for updating the URL shortener information
-[shortURLs]
-	updateInterval = 600
