update training faq

--- a/faqs.toml
+++ b/faqs.toml
@@ -64,7 +64,7 @@ seemore = "slack"
 
 [[faqs]]
 question = "Do I need to be trained?"
-answer = "Yes - before your first show we’ll give you a 1-on-1 training session, covering everything you need to know to go on air."
+answer = "Yes - before your first show we’ll give you a training session, either on your own or in a pair, covering everything you need to know to go on air."
 
 [[faqs]]
 question = "Can I join someone else’s show to see how it works?"
