Update jukebox description

--- a/config.toml.example
+++ b/config.toml.example
@@ -79,4 +79,4 @@
 
 	[schedule.sustainer]
 		name = "Overnight Owen"
-		desc = "Non-stop tones from the URY jukebox."
+		desc = "Non-stop tunes from the URY jukebox."
