--- a/faqs.toml
+++ b/faqs.toml
@@ -2,7 +2,7 @@
 
 # Its an array of objects with question and answer fields
 
-# Format: 
+# Format:
 # [[faqs]]
 # question = "Question Here"
 # answer = "Answer Here"
@@ -17,7 +17,7 @@
 
 [[faqs]]
 question = "How do I listen to URY?"
-answer = "Grab the boombox from your parents’ attic and tune it to 88.3FM, go to our website: ury.org.uk/live, ask your smart speaker “play University Radio York”, or get the Radioplayer, TuneIn, or Apple Music app."
+answer = "Grab the boombox from your parents’ attic and tune it to 88.3FM, find URY on your digital radio, go to our website: ury.org.uk/live, ask your smart speaker “play University Radio York”, or get the Radioplayer, TuneIn, or Apple Music app."
 
 [[faqs]]
 question = "Can I get a show?"
